--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -14,7 +14,6 @@ server {
 
     set_by_lua_block $auth_base { return os.getenv("AUTH_BASE") }
     set_by_lua_block $auth_port { return os.getenv("AUTH_PORT") }
-    set_by_lua_block $auth_realm { return os.getenv("AUTH_REALM") }
 
     set_by_lua_block $docker_registry_port { return os.getenv("DOCKER_REGISTRY_PORT") }
 
@@ -32,10 +31,6 @@ server {
     set_by_lua_block $music_downloader_base { return os.getenv("MUSIC_DOWNLOADER_BASE") }
     set_by_lua_block $music_downloader_port { return os.getenv("MUSIC_DOWNLOADER_PORT") }
 
-    set_by_lua_block $nginx_auth_username_header { return os.getenv("NGINX_AUTH_USERNAME_HEADER") }
-    set_by_lua_block $nginx_auth_client_id { return os.getenv("NGINX_AUTH_CLIENT_ID") }
-    set_by_lua_block $nginx_auth_client_secret { return os.getenv("NGINX_AUTH_CLIENT_SECRET") }
-
     set_by_lua_block $portainer_base { return os.getenv("PORTAINER_BASE") }
     set_by_lua_block $portainer_port { return os.getenv("PORTAINER_PORT") }
 
@@ -49,37 +44,9 @@ server {
     set_by_lua_block $ssh_base_dir { return os.getenv("SSH_BASE"):gsub("/", "") }
     set_by_lua_block $ssh_port { return os.getenv("SSH_PORT") }
 
-    set_by_lua_block $verdaccio_base { return os.getenv("VERDACCIO_BASE") }
-    set_by_lua_block $verdaccio_port { return os.getenv("VERDACCIO_PORT") }
-
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name justin.konratts.de;
-
-    access_by_lua_block {
-        if ngx.re.find(ngx.var.request_uri, "^/(documentation|music|music-downloader|callback-auth|logout)") and not ngx.re.find(ngx.var.request_uri, "^/(music/rest)") then
-            local opts = {
-                redirect_uri_path = "/callback-auth",
-                accept_none_alg = true,
-                discovery = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/.well-known/openid-configuration",
-                client_id = ngx.var.nginx_auth_client_id,
-                client_secret = ngx.var.nginx_auth_client_secret,
-                logout_path = "/logout",
-                redirect_after_logout_uri = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/protocol/openid-connect/logout",
-                session_contents = { id_token = true },
-                ssl_verify = "no"
-            }
-
-            local res, err, url, session = require("resty.openidc").authenticate(opts)
-            if err then
-                ngx.status = 403
-                ngx.say(err)
-                ngx.exit(ngx.HTTP_FORBIDDEN)
-            end
-
-            ngx.req.set_header(ngx.var.nginx_auth_username_header, res.id_token.preferred_username)
-        end
-    }
 
     location / {
         proxy_set_header Host $host;
@@ -96,6 +63,14 @@ server {
         proxy_pass http://$upstream;
     }
 
+    location /callback-auth {
+        access_by_lua_file /etc/nginx/lua/access.lua;
+    }
+
+    location /logout {
+        access_by_lua_file /etc/nginx/lua/access.lua;
+    }
+
     location /v2 {
         client_max_body_size 1G;
         set $upstream docker-registry:$docker_registry_port;
@@ -103,30 +78,9 @@ server {
     }
 
     location /docs {
+        access_by_lua_file /etc/nginx/lua/access.lua;
     	set $upstream documentation:$documentation_port;
     	proxy_pass http://$upstream;
-    }
-
-    location /fritz {
-        rewrite /fritz/?(.*) /$1 break;
-        proxy_pass https://192.168.188.1;
-        proxy_set_header Host fritz.box;
-        sub_filter /logincheck.lua /fritz/logincheck.lua;
-        sub_filter /login.lua /fritz/login.lua;
-        sub_filter /home.lua /fritz/home.lua;
-        sub_filter /home/ /fritz/home/;
-        sub_filter /internet/ /fritz/internet/;
-        sub_filter /fon_num/ /fritz/fon_num/;
-        sub_filter /net/ /fritz/net/;
-        sub_filter /wlan/ /fritz/wlan/;
-        sub_filter /dect/ /ftiz/dect/;
-        sub_filter /system/ /fritz/system/;
-        sub_filter /nas /fritz/nas;
-        sub_filter '<!--<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />-->' '<link rel="shortcut icon" type="image/x-icon" href="/fritz/favicon.ico" />';
-        sub_filter 'href="/css' 'href="/fritz/css';
-        sub_filter 'src="/css' 'src="/fritz/css';
-        sub_filter 'src="/js' 'src="/fritz/js';
-        sub_filter_once off;
     }
 
     location /gitlab {
@@ -138,12 +92,19 @@ server {
         proxy_pass http://$upstream;
     }
 
+    location /music/rest {
+        set $upstream music:$music_port;
+        proxy_pass http://$upstream;
+    }
+
     location /music {
+        access_by_lua_file /etc/nginx/lua/access.lua;
     	set $upstream music:$music_port;
         proxy_pass http://$upstream;
     }
 
     location /music-downloader {
+        access_by_lua_file /etc/nginx/lua/access.lua;
     	set $upstream music-downloader:$music_downloader_port;
         proxy_pass http://$upstream;
     }
@@ -165,6 +126,7 @@ server {
     }
 
     location /ssh {
+        access_by_lua_file /etc/nginx/lua/access.lua;
         set $upstream ssh:$ssh_port;
         proxy_pass http://$upstream;
         rewrite /ssh/?(.*) /$1 break;
@@ -173,50 +135,29 @@ server {
         sub_filter static/ ssh/static/;
         sub_filter_once off;
     }
+}
 
-    location ~ ^/npm/?(.*)$ {
-        proxy_set_header X-NginX-Proxy true;
-    	set $upstream verdaccio:$verdaccio_port;
-        proxy_pass http://$upstream/$1?$args;
-        proxy_redirect off;
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name just-fritz.konratts.de;
+
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
+    location / {
+        proxy_pass https://192.168.188.1;
+        proxy_set_header Host fritz.box;
     }
 }
 
 server {
-    set_by_lua_block $auth_realm { return os.getenv("AUTH_REALM") }
-
-    set_by_lua_block $dashboard_domain { return os.getenv("DASHBOARD_DOMAIN") }
     set_by_lua_block $dashboard_port { return os.getenv("DASHBOARD_PORT") }
-
-    set_by_lua_block $domain { return os.getenv("DOMAIN") }
-
-    set_by_lua_block $nginx_auth_client_id { return os.getenv("NGINX_AUTH_CLIENT_ID") }
-    set_by_lua_block $nginx_auth_client_secret { return os.getenv("NGINX_AUTH_CLIENT_SECRET") }
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name just-dashy.konratts.de;
 
-    access_by_lua_block {
-        local opts = {
-            redirect_uri_path = "/callback-auth",
-            accept_none_alg = true,
-            discovery = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/.well-known/openid-configuration",
-            client_id = ngx.var.nginx_auth_client_id,
-            client_secret = ngx.var.nginx_auth_client_secret,
-            logout_path = "/logout",
-            redirect_after_logout_uri = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/protocol/openid-connect/logout",
-            session_contents = { id_token = true },
-            ssl_verify = "no"
-        }
-
-        local res, err, url, session = require("resty.openidc").authenticate(opts)
-        if err then
-            ngx.status = 403
-            ngx.say(err)
-            ngx.exit(ngx.HTTP_FORBIDDEN)
-        end
-    }
+    access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
         set $upstream dashboard:$dashboard_port;
@@ -225,42 +166,61 @@ server {
 }
 
 server {
-    set_by_lua_block $auth_realm { return os.getenv("AUTH_REALM") }
-
     set_by_lua_block $doku_port { return os.getenv("DOKU_PORT") }
-
-    set_by_lua_block $domain { return os.getenv("DOMAIN") }
-
-    set_by_lua_block $nginx_auth_client_id { return os.getenv("NGINX_AUTH_CLIENT_ID") }
-    set_by_lua_block $nginx_auth_client_secret { return os.getenv("NGINX_AUTH_CLIENT_SECRET") }
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name just-doku.konratts.de;
 
-    access_by_lua_block {
-        local opts = {
-            redirect_uri_path = "/callback-auth",
-            accept_none_alg = true,
-            discovery = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/.well-known/openid-configuration",
-            client_id = ngx.var.nginx_auth_client_id,
-            client_secret = ngx.var.nginx_auth_client_secret,
-            logout_path = "/logout",
-            redirect_after_logout_uri = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/protocol/openid-connect/logout",
-            session_contents = { id_token = true },
-            ssl_verify = "no"
-        }
-
-        local res, err, url, session = require("resty.openidc").authenticate(opts)
-        if err then
-            ngx.status = 403
-            ngx.say(err)
-            ngx.exit(ngx.HTTP_FORBIDDEN)
-        end
-    }
+    access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
         set $upstream doku:$doku_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
+    set_by_lua_block $netdata_port { return os.getenv("NETDATA_PORT") }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name just-netdata.konratts.de;
+
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
+    location / {
+        set $upstream server.fritz.box:$netdata_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
+    set_by_lua_block $prometheus_port { return os.getenv("PROMETHEUS_PORT") }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name just-prometheus.konratts.de;
+
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
+    location / {
+        set $upstream prometheus:$prometheus_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
+    set_by_lua_block $grafana_port { return os.getenv("GRAFANA_PORT") }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name just-grafana.konratts.de;
+
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
+    location / {
+        set $upstream grafana:$grafana_port;
         proxy_pass http://$upstream;
     }
 }
