--- a/apps/server/nginx/envs.conf
+++ b/apps/server/nginx/envs.conf
@@ -18,6 +18,8 @@ env DOKU_PORT;
 env GITLAB_BASE;
 env GITLAB_PORT;
 
+env GRAFANA_PORT;
+
 env LINKSTACK_ADMIN;
 env LINKSTACK_PORT;
 
@@ -27,12 +29,16 @@ env MUSIC_PORT;
 env MUSIC_DOWNLOADER_BASE;
 env MUSIC_DOWNLOADER_PORT;
 
+env NETDATA_PORT;
+
 env NGINX_AUTH_USERNAME_HEADER;
 env NGINX_AUTH_CLIENT_ID;
 env NGINX_AUTH_CLIENT_SECRET;
 
 env PORTAINER_BASE;
 env PORTAINER_PORT;
+
+env PROMETHEUS_PORT;
 
 env SCOREBOARD_BASE;
 env SCOREBOARD_PORT;
@@ -42,6 +48,3 @@ env SONARQUBE_PORT;
 
 env SSH_BASE;
 env SSH_PORT;
-
-env VERDACCIO_BASE;
-env VERDACCIO_PORT;
