--- a/apps/server/backup-service/container.config.json
+++ b/apps/server/backup-service/container.config.json
@@ -1,15 +1,6 @@
 {
-    "type": "node",
+    "type": "custom",
     "tags": ["latest"],
     "composeFile": "apps/server/docker-compose.yml",
-    "composeServiceName": "backup-service",
-    "extensions": {
-        "preCopy": [
-            "RUN mkdir /data",
-            "RUN apk add rsnapshot",
-            "COPY --from=builder app/apps/server/backup-service/config/rsnapshot.conf /etc",
-            "COPY --from=builder app/apps/server/backup-service/config/crontabs/root /var/spool/cron/crontabs",
-            "RUN rsnapshot configtest"
-        ]
-    }
+    "composeServiceName": "backup-service"
 }
