feat(server-backup-service): switched to official rsnapshot image

--- a/apps/server/backup-service/Dockerfile
+++ b/apps/server/backup-service/Dockerfile
@@ -2,12 +2,6 @@ FROM codesdowork/monorepo-private/base AS base
 FROM codesdowork/monorepo-private/workspace AS workspace
 
 
-FROM alpine:3
+FROM lscr.io/linuxserver/rsnapshot
 
-RUN mkdir /data
-RUN apk add rsnapshot
-COPY --from=workspace app/apps/server/backup-service/config/rsnapshot.conf /etc
-COPY --from=workspace app/apps/server/backup-service/config/crontabs/root /var/spool/cron/crontabs
-RUN rsnapshot configtest
-
-ENTRYPOINT crond -f
+COPY --from=workspace app/apps/server/backup-service/config /config
