build(server): replaced nx-containers plugin with custom Dockerfiles and commands

--- a/apps/dashboard/Dockerfile
+++ b/apps/dashboard/Dockerfile
@@ -1,14 +1,21 @@
-FROM codesdowork/monorepo-private/base AS base
-FROM codesdowork/monorepo-private/workspace AS workspace
+ARG DOCKER_REGISTRY
+ARG ORGANIZATION
+ARG PROJECT
+
+ARG APP_NAME=dashboard
+ARG APP_DIR=dashboard
+
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/base AS base
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
 
 
 FROM workspace AS builder
-RUN npx nx build dashboard
+ARG APP_NAME
+RUN npx nx build $APP_NAME
 
 
 FROM lissy93/dashy
-
+ARG APP_DIR
 ENV NODE_ENV=production
 
-COPY --from=builder /app/dist/apps/dashboard/public /app/public
-HEALTHCHECK CMD node /app/services/healthcheck
+COPY --from=builder /app/dist/apps/$APP_DIR/public /app/public
