--- a/apps/server/backup-service/Dockerfile
+++ b/apps/server/backup-service/Dockerfile
@@ -1,10 +1,17 @@
-FROM codesdowork/monorepo-private/base AS base
-FROM codesdowork/monorepo-private/workspace AS workspace
+ARG DOCKER_REGISTRY
+ARG ORGANIZATION
+ARG PROJECT
+
+ARG APP_NAME=backup-service
+ARG APP_DIR=server/backup-service
+
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/base AS base
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
 
 
 FROM lscr.io/linuxserver/rsnapshot
-
-COPY --from=workspace app/apps/server/backup-service/healthcheck.sh /
+ARG APP_DIR
+COPY --from=workspace app/apps/$APP_DIR/healthcheck.sh /
 HEALTHCHECK CMD /healthcheck.sh
 
-COPY --from=workspace app/apps/server/backup-service/config /config
+COPY --from=workspace app/apps/$APP_DIR/config /config
