--- a/apps/server/backup-service/config/rsnapshot.conf
+++ b/apps/server/backup-service/config/rsnapshot.conf
@@ -90,9 +90,10 @@ cmd_postexec	/usr/bin/du -d 1 /.snapshots/ > /.snapshots/snapshotSizes
 # e.g. alpha, beta, gamma, etc.         #
 #########################################
 
-retain	alpha	6
-retain	beta	4
-retain	gamma	2
+retain	alpha	12
+retain	beta	7
+retain	gamma	4
+retain	delta	3
 
 ############################################
 #              GLOBAL OPTIONS              #
