--- a/apps/server/documentation/Dockerfile
+++ b/apps/server/documentation/Dockerfile
@@ -1,14 +1,23 @@
-FROM codesdowork/monorepo-private/base AS base
-FROM codesdowork/monorepo-private/workspace AS workspace
+ARG DOCKER_REGISTRY
+ARG ORGANIZATION
+ARG PROJECT
+
+ARG APP_NAME=server-documentation
+ARG APP_DIR=server/documentation
+
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/base AS base
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
 
 
 FROM workspace AS builder
-RUN cp libs/branding/assets/img/logo.svg apps/server/documentation/docs/public
-RUN cp libs/branding/assets/img/icon.svg apps/server/documentation/docs/public
-RUN cp libs/branding/assets/favicon/favicon.ico apps/server/documentation/docs/public
-RUN npx vitepress build --base /docs/ apps/server/documentation/docs
+ARG APP_NAME
+ARG APP_DIR
+RUN cp libs/branding/assets/img/logo.svg apps/$APP_DIR/docs/public
+RUN cp libs/branding/assets/img/icon.svg apps/$APP_DIR/docs/public
+RUN cp libs/branding/assets/favicon/favicon.ico apps/$APP_DIR/docs/public
+RUN npx vitepress build --base /docs/ apps/$APP_DIR/docs
 
 
 FROM nginx:1-alpine-slim
-
-COPY --from=builder /app/dist/apps/server/documentation /usr/share/nginx/html/docs
+ARG APP_DIR
+COPY --from=builder /app/dist/apps/$APP_DIR /usr/share/nginx/html/docs
