--- a/apps/server/music/Dockerfile
+++ b/apps/server/music/Dockerfile
@@ -1,5 +1,12 @@
-FROM codesdowork/monorepo-private/base AS base
-FROM codesdowork/monorepo-private/workspace AS workspace
+ARG DOCKER_REGISTRY
+ARG ORGANIZATION
+ARG PROJECT
+
+ARG APP_NAME=server-music
+ARG APP_DIR=server/music
+
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/base AS base
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
 
 
 FROM deluan/navidrome:latest
