--- a/apps/server/nginx/Dockerfile
+++ b/apps/server/nginx/Dockerfile
@@ -1,8 +1,16 @@
-FROM codesdowork/monorepo-private/base AS base
-FROM codesdowork/monorepo-private/workspace AS workspace
+ARG DOCKER_REGISTRY
+ARG ORGANIZATION
+ARG PROJECT
+
+ARG APP_NAME=server-nginx
+ARG APP_DIR=server/nginx
+
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/base AS base
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
 
 
 FROM openresty/openresty:alpine-fat
+ARG APP_DIR
 
 RUN mkdir /var/log/nginx
 
@@ -14,9 +22,10 @@ RUN luarocks install lua-resty-openidc
 WORKDIR /etc/nginx
 COPY --from=workspace /app/libs/server/ssl/certs/server.crt ssl/
 COPY --from=workspace /app/libs/server/ssl/certs/server.key ssl/
-COPY --from=workspace /app/apps/server/nginx/conf conf.d
-COPY --from=workspace /app/apps/server/nginx/lua lua
+COPY --from=workspace /app/apps/$APP_DIR/conf conf.d
+COPY --from=workspace /app/apps/$APP_DIR/lua lua
 
 WORKDIR /usr/local/openresty/nginx/conf
-COPY --from=workspace /app/apps/server/nginx/envs.conf .
+ARG APP_DIR
+COPY --from=workspace /app/apps/$APP_DIR/envs.conf .
 RUN echo "include envs.conf;" | cat - nginx.conf > nginx_new.conf && mv nginx_new.conf nginx.conf
