--- a/apps/dashboard/docker-compose.yml
+++ b/apps/dashboard/docker-compose.yml
@@ -1,18 +1,26 @@
+x-build-args:
+  build: &build-args
+    args:
+      - DOCKER_REGISTRY
+      - ORGANIZATION
+      - PROJECT
+
 services:
   dashboard:
-    image: justin.konratts.de/codesdowork/monorepo-private/dashboard
     container_name: dashboard
+    build:
+      <<: *build-args
+      context: .
+    healthcheck:
+      test: "node /app/services/healthcheck"
+    image: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}/dashboard
     ports:
       - 4000:80
     restart: unless-stopped
 
   dev:
     container_name: dashboard-dev
-    environment:
-      - NODE_ENV=production
     image: lissy93/dashy
-    healthcheck:
-      test: "node /app/services/healthcheck"
     ports:
       - 4001:80
     volumes:
