--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -3,36 +3,17 @@
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
     "targets": {
-        "dev": {
-            "executor": "nx:run-commands",
-            "options": {
-                "commands": ["docker compose -f apps/dashboard/docker-compose.yml up dev"]
-            }
-        },
         "build": {
             "executor": "nx:run-commands",
             "options": {
                 "commands": [
                     "rm -rf dist/apps/dashboard",
-                    "mkdir -p dist/apps/dashboard",
+                    "mkdir dist",
+                    "mkdir dist/apps",
+                    "mkdir dist/apps/dashboard",
                     "cp -rf apps/dashboard/public dist/apps/dashboard",
                     "cp -rf libs/branding/assets/img dist/apps/dashboard/public"
                 ]
-            }
-        },
-        "serve": {
-            "executor": "nx:run-commands",
-            "options": {
-                "command": "docker compose -f apps/dashboard/docker-compose.yml up -d dashboard"
-            }
-        },
-        "build-image": {
-            "executor": "@codesdowork/nx-containers:build"
-        },
-        "run-image": {
-            "executor": "nx:run-commands",
-            "options": {
-                "command": "docker compose -f apps/dashboard/docker-compose.yml up -d dashboard"
             }
         }
     },
