--- a/apps/server/music-downloader/package.json
+++ b/apps/server/music-downloader/package.json
@@ -1,5 +1,9 @@
 {
     "name": "music-downloader",
     "version": "1.0.0",
-    "description": "This app automatically downloads music from youtube"
+    "description": "This app automatically downloads music from youtube",
+    "scripts": {
+        "build-image": "docker compose -f ../docker-compose.yml build music-downloader",
+        "run-image": "docker compose -f ../docker-compose.yml up -d music-downloader"
+    }
 }
