--- a/apps/server/nginx/project.json
+++ b/apps/server/nginx/project.json
@@ -2,22 +2,6 @@
     "name": "server-nginx",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
-    "targets": {
-        "serve": {
-            "executor": "nx:run-commands",
-            "options": {
-                "command": "docker compose -f apps/server/docker-compose.yml up -d nginx"
-            }
-        },
-        "build-image": {
-            "executor": "@codesdowork/nx-containers:build"
-        },
-        "run-image": {
-            "executor": "nx:run-commands",
-            "options": {
-                "command": "docker compose -f apps/server/docker-compose.yml up -d nginx"
-            }
-        }
-    },
+    "targets": {},
     "tags": []
 }
