--- a/apps/server/ssh/Dockerfile
+++ b/apps/server/ssh/Dockerfile
@@ -1,3 +1,14 @@
+ARG DOCKER_REGISTRY
+ARG ORGANIZATION
+ARG PROJECT
+
+ARG APP_NAME=server-music
+ARG APP_DIR=server/music
+
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/base AS base
+FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
+
+
 FROM python:3-alpine
 WORKDIR /code
 
