--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "scripts": {
         "build": "nx run-many -t build",
+        "docker:build-workspace": "docker compose build base && docker compose build workspace",
+        "docker:build": "npm run docker:build-workspace && nx affected --base master -t build-image",
         "lint": "nx run-many -t lint",
         "test": "nx run-many -t test",
         "format": "nx format",
@@ -32,7 +34,6 @@
         "check": "pnpm run format:check && pnpm run lint && pnpm run test && pnpm run build"
     },
     "devDependencies": {
-        "@codesdowork/nx-containers": "^0.6.5",
         "@directus/extensions-sdk": "^10.1.9",
         "@directus/types": "^10.1.5",
         "@nx/cypress": "16.5.4",
@@ -60,6 +61,7 @@
         "autoprefixer": "^10.4.14",
         "babel-jest": "^29.4.1",
         "copyfiles": "^2.4.1",
+        "cross-env": "^7.0.3",
         "cypress": "^12.16.0",
         "esbuild": "0.17.17",
         "eslint": "~8.15.0",
