--- a/apps/server/prometheus/package.json
+++ b/apps/server/prometheus/package.json
@@ -2,7 +2,7 @@
     "name": "prometheus",
     "version": "1.0.0",
     "scripts": {
-        "build-image": "docker compose -f ../docker-compose.yml build prometheus",
+        "build-image": "docker compose -f ../docker-compose.yml build --push prometheus",
         "run-image": "docker compose -f ../docker-compose.yml up -d prometheus"
     }
 }
