--- a/apps/server/ssh/package.json
+++ b/apps/server/ssh/package.json
@@ -2,7 +2,7 @@
     "name": "ssh",
     "version": "1.0.0",
     "scripts": {
-        "build-image": "docker compose -f ../docker-compose.yml build ssh",
+        "build-image": "docker compose -f ../docker-compose.yml build --push ssh",
         "run-image": "docker compose -f ../docker-compose.yml up -d ssh"
     }
 }
