--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "scripts": {
         "build": "nx run-many -t build",
-        "docker:build-workspace": "docker compose build base && docker compose build workspace",
+        "docker:build-workspace": "docker compose build --push base && docker compose build --push workspace",
         "docker:build": "npm run docker:build-workspace && nx affected --base master -t build-image",
         "lint": "nx run-many -t lint",
         "test": "nx run-many -t test",
