--- a/apps/server/documentation/package.json
+++ b/apps/server/documentation/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "This package provides documentation for the server",
     "scripts": {
-        "build-image": "docker compose -f ../docker-compose.yml build documentation",
+        "build-image": "docker compose -f ../docker-compose.yml build --push documentation",
         "run-image": "docker compose -f ../docker-compose.yml up -d documentation"
     }
 }
