--- a/apps/server/music/package.json
+++ b/apps/server/music/package.json
@@ -2,7 +2,7 @@
     "name": "music",
     "version": "1.0.0",
     "scripts": {
-        "build-image": "docker compose -f ../docker-compose.yml build music",
+        "build-image": "docker compose -f ../docker-compose.yml build --push music",
         "run-image": "docker compose -f ../docker-compose.yml up -d music"
     }
 }
