--- a/package.json
+++ b/package.json
@@ -36,38 +36,37 @@
     "devDependencies": {
         "@directus/extensions-sdk": "^10.1.9",
         "@directus/types": "^10.1.5",
-        "@nx/cypress": "16.5.4",
-        "@nx/esbuild": "16.3.2",
-        "@nx/eslint-plugin": "16.3.2",
-        "@nx/jest": "16.3.2",
-        "@nx/js": "16.5.4",
-        "@nx/linter": "16.3.2",
-        "@nx/next": "^16.5.4",
-        "@nx/node": "16.3.2",
-        "@nx/react": "16.5.4",
-        "@nx/workspace": "16.3.2",
+        "@nx/cypress": "17.1.3",
+        "@nx/esbuild": "17.1.3",
+        "@nx/eslint-plugin": "17.1.3",
+        "@nx/jest": "17.1.3",
+        "@nx/js": "17.1.3",
+        "@nx/next": "17.1.3",
+        "@nx/node": "17.1.3",
+        "@nx/react": "17.1.3",
+        "@nx/workspace": "17.1.3",
         "@swc/cli": "~0.1.62",
-        "@swc/core": "~1.3.51",
+        "@swc/core": "1.3.99",
         "@testing-library/react": "14.0.0",
         "@types/d3": "^7.4.0",
         "@types/jest": "^29.4.0",
         "@types/node": "18.14.2",
         "@types/node-cron": "^3.0.7",
         "@types/pg": "^8.10.2",
-        "@types/react": "18.2.14",
-        "@types/react-dom": "18.2.6",
-        "@typescript-eslint/eslint-plugin": "5.58.0",
-        "@typescript-eslint/parser": "5.58.0",
+        "@types/react": "18.2.24",
+        "@types/react-dom": "18.2.9",
+        "@typescript-eslint/eslint-plugin": "6.9.1",
+        "@typescript-eslint/parser": "6.9.1",
         "autoprefixer": "^10.4.14",
         "babel-jest": "^29.4.1",
         "copyfiles": "^2.4.1",
         "cross-env": "^7.0.3",
-        "cypress": "^12.16.0",
-        "esbuild": "0.17.17",
-        "eslint": "~8.15.0",
+        "cypress": "^13.0.0",
+        "esbuild": "^0.19.2",
+        "eslint": "8.46.0",
         "eslint-config-next": "13.4.1",
-        "eslint-config-prettier": "8.1.0",
-        "eslint-plugin-cypress": "^2.10.3",
+        "eslint-config-prettier": "9.0.0",
+        "eslint-plugin-cypress": "2.13.4",
         "eslint-plugin-import": "2.27.5",
         "eslint-plugin-jsx-a11y": "6.7.1",
         "eslint-plugin-prettier": "^4.2.1",
@@ -76,7 +75,7 @@
         "jest": "^29.4.1",
         "jest-environment-jsdom": "^29.4.1",
         "jest-environment-node": "^29.4.1",
-        "nx": "16.3.2",
+        "nx": "17.1.3",
         "pino-pretty": "^10.0.0",
         "postcss": "^8.4.27",
         "prettier": "^2.8.8",
@@ -84,8 +83,9 @@
         "tailwindcss": "^3.3.3",
         "ts-jest": "29.1.0",
         "ts-node": "10.9.1",
-        "typescript": "5.0.4",
-        "vitepress": "1.0.0-rc.20"
+        "typescript": "5.2.2",
+        "vitepress": "1.0.0-rc.20",
+        "@nx/eslint": "17.1.3"
     },
     "dependencies": {
         "@fastify/swagger": "^8.8.0",
@@ -93,7 +93,7 @@
         "@fastify/websocket": "^8.1.0",
         "@mermaid-js/mermaid-mindmap": "^9.3.0",
         "@notionhq/client": "^2.2.8",
-        "@swc/helpers": "~0.5.0",
+        "@swc/helpers": "0.5.3",
         "@t3-oss/env-core": "^0.6.0",
         "@tailwindcss/forms": "^0.5.4",
         "@trpc/client": "^10.35.0",
